<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/quiz">

    <TextView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:textSize="40dp"
        android:textAlignment="center"
        android:text="@string/quiz_ap"/>

    <EditText
        android:id="@+id/edtxtusername"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edtxtpassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:background="#ef8b09"
        android:textColor="#ffffff"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="136dp"
            android:layout_height="35dp"
            android:text="@string/not_registered"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="116dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#ef8b09"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>




